# bar-rs

./: .harper-dictionary.txt  Cargo.toml  Cargo.toml.old  README.md  bar-rs  crabbar_structure.rnote  flake.nix  install.sh
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: accept_option.rs  daemon.rs  directories.rs  ipc.rs  lib.rs  message.rs  module.rs  registry.rs  serde_with.rs  state.rs  template_engine.rs  window.rs
core/src/config/: load.rs  mod.rs  module.rs  prepare.rs  style.rs  theme.rs  window.rs
core/src/helpers/: accept_option.rs  merge.rs  mod.rs  serde_with.rs  task_constructor.rs
core/src/subscription/: mod.rs  reload.rs
crabbar/: Cargo.toml
crabbar/src/: cli.rs  daemon.rs  directories.rs  logger.rs  main.rs  message.rs  state.rs  subscription.rs  window.rs
crabbar/src/config/: mod.rs  types.rs
crabbar/src/ipc/: mod.rs
crates/bar-rs_derive/src/: lib.rs
default_config/: horizontal.ini  vertical.ini
derive/: Cargo.toml
derive/src/: lib.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
old/: main.rs  message.rs  registry.rs  subscription.rs
old/config/: directories.rs  insets.rs  mod.rs  style.rs  theme.rs  types.rs
src/: button.rs  fill.rs  list.rs  main.rs  message.rs  registry.rs  resolvers.rs  subscription.rs  template_engine.rs  tooltip.rs  wayland.rs
src/config/: anchor.rs  directories.rs  enabled_modules.rs  insets.rs  mod.rs  module_config.rs  parse.rs  popup_config.rs  reload.rs  style.rs  theme.rs  types.rs
src/helpers/: mod.rs
src/listeners/: hyprland.rs  mod.rs  niri.rs  reload.rs  wayfire.rs
src/modules/: battery.rs  bluetooth.rs  cpu.rs  date.rs  disk_usage.rs  empty.rs  hyprland.rs  media.rs  memory.rs  mod.rs  playerctl.rs  sys_tray.rs  time.rs  volume.rs
src/modules/hyprland/: mod.rs  window.rs  workspaces.rs
src/modules/niri/: mod.rs  window.rs  workspaces.rs
src/modules/wayfire/: window.rs  workspaces.rs
wiki/: Home.md  Modules.md  Modules:-Battery.md  Modules:-CPU.md  Modules:-Disk-usage.md  Modules:-Hyprland.md  Modules:-Media.md  Modules:-Niri.md  Modules:-Wayfire.md  Popups.md  WM specific.md
