[package]
name = "crabbar"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/pop-os/iced.git", branch = "master", features = [
    "tokio",
    "wayland",
    "winit",
    "image",
] }
bar-rs_derive = { path = "crates/crabbar_derive" }
tokio = { version = "1.45.1", features = [
    "io-util",
    "macros",
    "process",
    "sync",
] }
log = "0.4.27"
config = "0.15.11"
anyhow = "1.0.98"
serde = "1.0.219"
smithay-client-toolkit = "0.19.2"
serde_variant = "0.1.3"
fern = { version = "0.7.1", features = ["colored"] }
chrono = "0.4.41"
csscolorparser = "0.7.2"

[profile.dev.package."*"]
opt-level = 3
