[workspace]
resolver = "3"
members = ["crabbar", "derive", "ipc"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
crabbar.path = "crabbar"
derive = { path = "derive", package = "crabbar-derive" }
ipc = { path = "ipc", package = "crabbar-ipc" }

iced = { git = "https://github.com/pop-os/iced.git", branch = "master", features = [
  "tokio",
  "wayland",
  "winit",
  "image",
] }
tokio = { version = "1.46.1", features = [
  "macros",
  "sync",
  "net",
  "io-util",
  "fs",
] }
log = "0.4.27"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
smithay-client-toolkit = "0.19.2"
fern = { version = "0.7.1", features = ["colored"] }
toml = "0.9.2"
toml_edit = "0.23.2"
toml-example = "0.13.0"
clap = { version = "4.5.41", features = ["derive", "string"] }
daemonize = "0.5.0"
ctrlc = "3.4.7"
ron = "0.10.1"
chrono = "0.4.41"
nix = "0.30.1"

proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = "2.0.94"
