[workspace]
resolver = "3"
members = ["core", "crabbar", "derive"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
crabbar.path = "crabbar"
core = { path = "core", package = "crabbar-core" }
derive = { path = "derive", package = "crabbar-derive" }

iced = { git = "https://github.com/pop-os/iced.git", branch = "master", features = [
  "tokio",
  "wayland",
  "winit",
  "image",
] }
tokio = { version = "1.46.1", features = [
  "macros",
  "sync",
  "net",
  "io-util",
  "fs",
] }
log = "0.4.27"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
smithay-client-toolkit = "0.20"
fern = { version = "0.7.1", features = ["colored"] }
toml = "0.9.2"
toml_edit = "0.23.2"
# toml-example = "0.14.0"
toml-example.path = "../toml-example/lib"
clap = { version = "4.5.41", features = [
  "deprecated",
  "derive",
  "env",
  "wrap_help",
  "string",
] }
daemonize = "0.5.0"
ctrlc = "3.4.7"
ron = "0.10.1"
chrono = "0.4.41"
nix = "0.30.1"
optfield = "0.4.0"
merge = "0.2.0"
csscolorparser = { version = "0.7.2", features = ["serde"] }
darkmode = "0.1.0"
downcast-rs = "2.0.1"
notify = "8.2.0"

proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = "2.0.94"

[workspace.lints.clippy]
unused_trait_names = "deny"
