[package]
name = "crabbar"
version.workspace = true
edition.workspace = true

[dependencies]
core.workspace = true

log.workspace = true
anyhow.workspace = true
fern.workspace = true
clap.workspace = true
ctrlc.workspace = true
ron.workspace = true
chrono.workspace = true
nix.workspace = true
toml-example.workspace = true

[lints]
workspace = true
